namespace GitInsight;
public enum Mode
{
    NULL,
    AUTHOR,
    FREQUENCY
}