namespace GitInsight;

class Program
{
    static void Main(string[] args)
    {
        var ctrl = new Control();
        ctrl.Run();  
    }
}